# JEPA

./: .gitignore  CLAUDE.md  HANDOFF.md  PLAN.md  README.md  package-lock.json  pyproject.toml  requirements.txt  run_demo.sh  run_goal.sh  run_infer.sh  run_policy.sh  run_step.sh  run_teach.sh  run_web.sh  test.py  wfb_up.sh
android/: README.md  build.gradle.kts
archive/: README.md
docs/: CEM_STEERING_FLAT_20260614.md  CLOSED_LOOP_FAILURE.md  DATA_COLLECTION.md  HANDOFF.md  LEWM_OVERNIGHT.md  LeWorldModel.md  NIGHT_20260614.md  PLAN.md  SIM_3DGS_PLAN.md  VJEPA2_AC_CAR.md  how_it_works.md  split_vjepa_ac_car.json  troubleshooting.md
electronic_devices/: README.md  hardware.md  next_steps.md  wfb_ng_reference.md
firmware/: platformio.ini
rc-carcar/: platformio.ini  specs.md
robot/: runcam.sdp
scripts/: bench_relay_test.py  build_graph.py  capture_goal.py  compare_experiments.py  dataset_stats.py  demo_export_mp4.py  demo_precompute.py  demo_web.py  encode_dataset.py  encode_patch.py  eval_demo_joint.py  eval_goal_reaching.py  eval_goal_reaching_ac.py  eval_lewm.py  eval_navigation.py  eval_policy_bucket.py  eval_policy_xsession.py  eval_ratio_ac.py  eval_recovery_response.py  evaluate.py  geosteer_integration_check.py  geosteer_rotvec_check.py  geosteer_validate.py  inference_loop.py  lewm_cem_dryrun.py  lewm_overnight.py  lewm_sweep.py  meas_tail.py  measure_gps_noise.py  measure_speed_r2.py  night_recovery_chain.sh  overnight_20260612.sh  pick_goal.py  plot_closed_loop.py  plot_contrast_vs_horizon.py  plot_cross_lighting.py  plot_dataset_overview.py  (+30 more)
(+203 files in other folders)
